--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,6 +1,6 @@
 <div class="w3-top"> <!-- Forces navbar to stay sticked at the top -->
 
-  <ul class="w3-navbar w3-hide-large w3-green">
+  <ul class="w3-green" id="sideNavToggle">
     <li><a href="#" ng-click="sideNavToggle()"><span class="w3-large">&#9776;</span></a>
     </li>
     <li><a href="#">
@@ -8,7 +8,7 @@
     </li>
   </ul>
 
-  <ul class="w3-navbar w3-green w3-hide-medium w3-hide-small">
+  <ul class="w3-navbar w3-green" id="navbar-large">
     <li><a class="w3-padding-16" href="#">
       PORTFOLIO <sup class="w3-tag w3-red">Alpha</sup></a>
     </li>
