Provides social share feature on small and medium size devices

--- a/components/contactus.html
+++ b/components/contactus.html
@@ -55,6 +55,70 @@
                 </div> -->
             </div><!-- col -->
           </div><!-- row -->
+
+          <div class="row w3-hide-large">
+            <div class="w3-col">
+              <section class="w3-center" id="shareFromBottom">
+                <h5>Share IT ON: &darr;</h5>
+                <ul class="socialicons">
+                  <li><a href="#"
+                    socialshare
+                    socialshare-provider="linkedin"
+                    socialshare-text="Hire the most Creative Software Engineer"
+                    socialshare-hashtags="Navneet, techraiders"
+                    socialshare-url="http://techraiders.github.io/portfolio">
+                    <i class="fa fa-linkedin w3-xlarge" aria-hidden="true"></i>
+                  </a></li>
+                  <li>
+                  <a href="#"
+                    socialshare
+                    socialshare-provider="facebook"
+                    socialshare-text="Hire the most Creative Software Engineer"
+                    socialshare-hashtags="Navneet, techraiders"
+                    socialshare-url="http://techraiders.github.io/portfolio">
+                    <i class="fa fa-facebook w3-xlarge" w3-xlarge aria-hidden="true"></i>
+                  </a></li>
+                            <li>
+                  <a href="#"
+                    socialshare
+                    socialshare-provider="twitter"
+                    socialshare-text="Hire the most Creative Software Engineer"
+                    socialshare-hashtags="Navneet, techraiders"
+                    socialshare-url="http://techraiders.github.io/portfolio">
+                    <i class="fa fa-twitter w3-xlarge" aria-hidden="true" target="_blank"></i>
+                  </a></li>
+                            <li>
+                  <a href="#"
+                    socialshare
+                    socialshare-provider="google"
+                    socialshare-text="Hire the most Creative Software Engineer"
+                    socialshare-hashtags="Navneet, techraiders"
+                    socialshare-url="http://techraiders.github.io/portfolio">
+                    <i class="fa fa-google-plus w3-xlarge" aria-hidden="true"></i>
+                  </a></li>
+                            <li>
+                  <a href="#"
+                    socialshare
+                    socialshare-provider="skype"
+                    socialshare-text="Hire the most Creative Software Engineer"
+                    socialshare-hashtags="Navneet, techraiders"
+                    socialshare-url="http://techraiders.github.io/portfolio">
+                    <i class="fa fa-skype" aria-hidden="true"></i>
+                  </a></li>
+                  <li>          
+                    <a href="#"
+                      socialshare
+                      socialshare-provider="pinterest"
+                      socialshare-text="Hire the most Creative Software Engineer"
+                      socialshare-hashtags="Navneet, techraiders"
+                      socialshare-url="http://techraiders.github.io/portfolio">
+                      <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                </ul>
+              </section>
+            </div>
+          </div>
           
           <div class="w3-row">
             <div class="w3-col w3-center">
