--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,6 @@ a.help:hover {
 }
 
 ul.socialicons {
-    overflow: auto;
     display: inline-flex;
     -webkit-padding-start: 0px;
 }
@@ -43,8 +42,14 @@ ul.socialicons li {
     list-style-type: none;
     float: left;
     padding-top: 2px;
+    margin: 0 2px;
 }
- 
+
+.w3-sidenav a {
+  padding: 0;
+  margin: 3px 4px;
+}
+
 ul.socialicons li a i, .w3-sidenav a i, span i{
     color: #fff;
     width: 40px;
@@ -52,8 +57,7 @@ ul.socialicons li a i, .w3-sidenav a i, span i{
     border-radius: 20px;
     font-size: 20px;
     text-align: center;
-    margin-right: 10px;
-    padding-top: 22%;
+    padding-top: 27%;
     transition: all 0.2s ease-in-out;
 }
 .fa-facebook {
@@ -91,6 +95,14 @@ ul.socialicons li a i:hover {
   background:#dd4b39;
 }
 
+#shareFromBottom h5 {
+  background-color: #ff9800;
+  margin: 0 auto;
+  font-variant: small-caps;
+  color: white;
+  font-weight: bold;
+}
+
 footer{
     text-align: center;
 }
@@ -106,7 +118,7 @@ td a {
 }
 
 #menu + article {
-    margin: 100px auto 20px auto;
+    margin: 60px auto 20px auto;
 }
 
 @media only screen and (min-width: 993px) {
