Information update in timeline and resume.

--- a/components/sidenav.html
+++ b/components/sidenav.html
@@ -3,7 +3,7 @@
         <a href="">
           <i class="fa fa-share-alt" aria-hidden="true" ng-mouseover="showsocialshareiconsholder=true"></i>
         </a>
-        <a href="documents/resume.pdf" download="UI_DEVELOPER_RESUME.pdf">
+        <a href="documents/front-end-developer.pdf" download="Front-End-Developer.pdf">
           <i class="fa fa-download" aria-hidden="true"></i>
         </a>
       </nav>
