--- a/components/timeline.html
+++ b/components/timeline.html
@@ -51,8 +51,6 @@
 							<p>Object oriented analysis and design, documentation. Quering &amp; retrieving data from SQL Server database using PL/SQL. Followed by exam preparation.</p>
 						</article>
 					</li>
-					<li data-year="2015"></li>
-					<li></li>
 					<li>
 						<article class="w3-card-4">
 							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> MCA(Management) </h6>
@@ -61,13 +59,13 @@
 							<p>Graduated in First Class from University of Pune.</p>
 						</article>
 					</li>
-					<li data-year="2013"></li>
+					<li data-year="2012"></li>
 					<li></li>
 					<li>
 						<article class="w3-card-4">
 							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> BCA </h6>
 							<h6 class="content"><a href="http://www.prestigegwl.org/" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> Prestige Institute of Management, Gwalior.</a></h6>
-							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July - April</h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July 2009- April 2012</h6>
 							<p>Graduated in First Class from Jiwaji University, Gwalior.</p>
 						</article>
 					</li>
@@ -77,7 +75,7 @@
 						<article class="w3-card-4">
 							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> HIGHER SECONDARY (12th) </h6>
 							<h6 class="content"><a href="#" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> Tapeshwar Singh College, Chapra.</a></h6>
-							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July - April</h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July 2007 - April 2009</h6>
 							<p>Qualified in First Class from Bihar School Examination Board, Patna.</p>
 						</article>
 					</li>
