Removes obsolete skills, updates introduction.

--- a/components/educationandtraining.html
+++ b/components/educationandtraining.html
@@ -48,7 +48,7 @@
                     <tr class="w3-hover-light-grey">
                       <td><a href="http://www.udemy.com/"><img src="https://media.licdn.com/media/p/8/005/05d/205/00a7692.png" style="width:75%" alt="UDEMY"></a> </td>
                       <td>{{ course.name }}</td>
-                      <td><a href="http://{{ course.certificateURL }}" target="_blank"> Click here</a></td>
+                      <td><a href="http://{{ course.certificateURL }}" target="_blank"> CLICK HERE</a></td>
                     </tr>
                   </tbody>
                 </table>
