--- a/components/navbar.html
+++ b/components/navbar.html
@@ -20,12 +20,15 @@
     <li><a class="w3-padding-16" href="#">ACHIEVEMENTS</a></li>
     <li><a class="w3-padding-16" href="#">CALENDAR</a></li>
     <li class="w3-dropdown-hover">
-      <a class="w3-padding-16" href="#">PROJECTS <i class="fa fa-caret-down"></i></a>
-      <div class="w3-dropdown-content w3-green">
-        <a class="w3-padding-16" href="#">PORTFOLIO</a>
-        <a class="w3-padding-16" href="#">VAIDYA</a>
-        <a class="w3-padding-16" href="#">E-COMMERCE</a>
-        <a class="w3-padding-16" href="#">E-CLASSIFIEDS</a>
+      <a class="w3-padding-16" href="#">WORK SAMPLES <i class="fa fa-caret-down"></i></a>
+      <div class="w3-dropdown-content w3-light-grey">
+        <div class="list-divider">PROJECTS</div>
+            <a class="w3-padding-16">PORTFOLIO</a>
+            <a class="w3-padding-16" href="https://github.com/techraiders/vaidya/">VAIDYA</a>
+            <a class="w3-padding-16">E-COMMERCE</a>
+            <a class="w3-padding-16" href="http://techraiders.github.io/ngClassifieds/">E-CLASSIFIEDS</a>
+        <div class="list-divider">IMAGES EDITING</div>
+            <a class="w3-padding-16" href="https://goo.gl/photos/3trtkzuWVutgSi3w7">GALLARY</a>
       </div>
     </li>
     <li><a class="w3-padding-16" href="#">REFERENCES</a></li>
