--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -19,7 +19,7 @@
                   <aside ng-include="'components/sidenav.html'"></aside>
             
             <address class="mg-40">
-              <strong> <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Address: </span></strong>Nihal Vihar, Main Market, Delhi - 110041
+              <strong> <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Address: </span></strong>Laxmi Nagar, New Delhi - 110092
               <br/>
               <strong><i class="fa fa-mobile w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small" > Phone:</span></strong> +91-9527936489<br/>
               <strong> <i class="fa fa-envelope w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Email:</span></strong> <span ng-copy="Message=true"> hello_navneet@hotmail.com</span> <span class="w3-tag w3-orange w3-margin-left" ng-show="Message"><em><strong>Email Copied</strong></em></span>
