Upgrades font awesome and adds icons in definition terms of introduction

--- a/components/contactus.html
+++ b/components/contactus.html
@@ -1,6 +1,5 @@
-<section class="w3-container" id="contact">
+<section class="w3-container w3-card-4" id="contact">
         <h3> <i class="fa fa-phone" aria-hidden="true"></i> CONTACT ME</h3>
-        <div class="w3-card-4">
           <div class="w3-row-padding">
             <div class="w3-col l6" id="map">
               <header class="w3-green">
@@ -125,5 +124,4 @@
               <a href="#" id="bottom">Go to top (disabled) </a>
             </div>
           </div>
-        </div><!-- card -->
       </section>
