--- a/components/educationandtraining.html
+++ b/components/educationandtraining.html
@@ -1,7 +1,6 @@
-      <section class="w3-container" id="educationandtraining">
+      <section class="w3-container w3-card-4" id="educationandtraining">
         <h3><i class="fa fa-graduation-cap" aria-hidden="true"></i> EDUCATION AND TRAININGS</h3>
-          <div class="w3-card-4">
-            <div class="w3-row-padding">
+          <div class="w3-row-padding">
               <div class="w3-col l6">
                 <div class="w3-responsive">
                   <table class="w3-table w3-striped">
