--- a/components/navbar.html
+++ b/components/navbar.html
@@ -21,11 +21,11 @@
     <li><a class="w3-padding-16" href="#">CALENDAR</a></li>
     <li class="w3-dropdown-hover">
       <a class="w3-padding-16" href="#">WORK SAMPLES <i class="fa fa-caret-down"></i></a>
-      <div class="w3-dropdown-content w3-light-grey">
+      <div class="w3-dropdown-content w3-border w3-border-green">
         <div class="list-divider">PROJECTS</div>
             <a class="w3-padding-16">PORTFOLIO</a>
             <a class="w3-padding-16" href="https://github.com/techraiders/vaidya/">VAIDYA</a>
-            <a class="w3-padding-16">E-COMMERCE</a>
+            <a class="w3-padding-16" href="https://github.com/techraiders/bestdeal">E-COMMERCE</a>
             <a class="w3-padding-16" href="http://techraiders.github.io/ngClassifieds/">E-CLASSIFIEDS</a>
         <div class="list-divider">IMAGES EDITING</div>
             <a class="w3-padding-16" href="https://goo.gl/photos/3trtkzuWVutgSi3w7">GALLARY</a>
