--- a/components/skills.html
+++ b/components/skills.html
@@ -1,6 +1,5 @@
-<section class="w3-container" id="skills">
+<section class="w3-container w3-card-4" id="skills">
     <h3> SKILLS</h3><br/>
-  <div class="w3-card-4 w3-padding-medium">
       <div class="w3-row" style="font-size: 1.2em;font-size: medium;font-variant: small-caps;">
         <div class="w3-col w3-center">
           <p style="width:300px;display:inline-block;">SHOW ME YOUR SKILLS IN: </p>
@@ -94,5 +93,4 @@
                 </div><!-- modal -->     
               </div><!-- col -->
             </div><!-- row -->
-  </div><!-- card -->
 </section>
