--- a/components/timeline.html
+++ b/components/timeline.html
@@ -1,6 +1,6 @@
-<div class="w3-container">
+<div class="w3-container w3-card-4">
 	<div class="w3-row">
-		<div class="w3-col w3-card-4 ">
+		<div class="w3-col">
 			<section class="timeline">
 				<header class="w3-center w3-green">
 					<h2 class="experience"> 
