--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -1,5 +1,4 @@
-<section class="w3-container">
-  <div class="w3-card-4">
+<section class="w3-container w3-card-4">
     <div class="w3-row" id="siteHeader">
       <div class="w3-col w3-card m4 l2" style="height:350px;">
         <img src="img/dp.jpg" alt="Display Picture" style="width:100%;height:100%">
@@ -36,5 +35,4 @@
         </div> <!-- dp details -->
       </div> <!-- intro column beside dp -->
     </div><!-- dp row -->
-  </div><!-- card -->
 </section>
