--- a/components/timeline.html
+++ b/components/timeline.html
@@ -37,7 +37,7 @@
 					</li>
 					<li>
 						<article class="w3-card-4">
-							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> Online Training </h6>
+							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> ONLINE TRAINING </h6>
 							<h6 class="content"><i class="fa fa-globe" aria-hidden="true"></i> <a href="http://www.udemy.com/">Udemy.com and Lynda.com</a></h6>
 							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> May - June</h6>
 							<p>Learned Angular 2, Git and Github, Aptitude, Reasoning, other research.</p>
@@ -53,7 +53,7 @@
 					</li>
 					<li>
 						<article class="w3-card-4">
-							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> MCA(Management) </h6>
+							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> MASTER OF COMPUTER APPLICATIONS </h6>
 							<h6 class="content"><a href="http://www.dypimca.org/" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> Pad. Dr. D.Y.Patil Institute of MCA Akurdi, Pune.</a></h6>
 							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July - April</h6>
 							<p>Graduated in First Class from University of Pune.</p>
@@ -63,7 +63,7 @@
 					<li></li>
 					<li>
 						<article class="w3-card-4">
-							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> BCA </h6>
+							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> BACHELOR OF COMPUTER APPLICATIONS </h6>
 							<h6 class="content"><a href="http://www.prestigegwl.org/" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> Prestige Institute of Management, Gwalior.</a></h6>
 							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July 2009- April 2012</h6>
 							<p>Graduated in First Class from Jiwaji University, Gwalior.</p>
