--- a/components/navbar.html
+++ b/components/navbar.html
@@ -10,7 +10,7 @@
     </li>
   </ul>
 
-  <ul class="w3-navbar w3-green" id="navbar-large">
+  <ul class="w3-navbar w3-green w3-card-4" id="navbar-large">
     <li><a class="w3-padding-16" href="#">
       PORTFOLIO <sup class="w3-tag w3-red">Alpha</sup></a>
     </li>
