Pauses flag animation in timeline on hover.

--- a/components/skills.html
+++ b/components/skills.html
@@ -83,7 +83,7 @@
                       <span onclick="document.getElementById('id01').style.display='none'" class="w3-closebtn">&times;</span>
                         <h3 class="">&darr; Level of skills</h3>
                     </header><!-- modal container -->
-                      <figure ng-switch-when="PieChart">
+                      <figure>
                         <img id="skills_chart">
                         <figcaption class="w3-tag w3-orange w3-padding w3-margin-bottom">
                         write your caption here
