--- a/css/timeline.css
+++ b/css/timeline.css
@@ -7,21 +7,18 @@
   margin: 0 auto;
   background: #4CAF50!important;
   padding-top: 46px;
-  -webkit-perspective: 500px;
-          perspective: 500px;
+  perspective: 500px;
 } /* list style */
 .timeline ul li::after {
   content: '';
   position: absolute;
   left: 50%;
   bottom: 0;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   width: 30px;
   height: 30px;
   border-radius: 50%;
   background: #F45B69;
-  -webkit-transition: background-color 1s;
   transition: background-color 1s;
 }/* list sudo element style */
 
@@ -56,7 +53,6 @@
   background: #F45B69;
   visibility: hidden;
   opacity: 0;
-  -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 } /* list item style */
 
@@ -70,12 +66,14 @@
 } /* list item arrow style */
 
 .timeline ul li.in-view:nth-child(1n) article {
-  -webkit-transform: none;
-          transform: none;
+  transform: none;
   visibility: visible;
   opacity: 1;
-  -webkit-animation: flag 2s cubic-bezier(0.45, 0.03, 0.51, 0.95) .8s infinite alternate;
-          animation: flag 2s cubic-bezier(0.45, 0.03, 0.51, 0.95) .8s infinite alternate;
+  animation: flag 2s cubic-bezier(0.45, 0.03, 0.51, 0.95) .8s infinite alternate;
+}
+
+.timeline ul li.in-view:nth-child(1n) article:hover {
+  animation-play-state: paused;
 }
 
 .timeline ul li.in-view::after {
@@ -84,8 +82,7 @@
 /* Some style for our odd elements*/
 .timeline ul li:nth-child(odd) article {
   left: 39px;
-  -webkit-transform: translate3d(112px, 0, 0);
-          transform: translate3d(112px, 0, 0);
+  transform: translate3d(112px, 0, 0);
 }
 
 .timeline ul li:nth-child(odd) article::before {
@@ -97,8 +94,7 @@
 /* Some style for our even elements */
 .timeline ul li:nth-child(even) article {
   left: -433px;
-  -webkit-transform: translate3d(-140px, 0, 0);
-          transform: translate3d(-140px, 0, 0);
+  transform: translate3d(-140px, 0, 0);
 }
 .timeline ul li:nth-child(even) article::before {
   right: -15px;
@@ -165,112 +161,80 @@ Reference: https://webdesign.tutsplus.com/tutorials/building-a-vertical-timeline
   
 /* TIMELINE HEADER FLIP UP ANIMATION */
 h2.experience{
-  -webkit-perspective: 800px;
-          perspective: 800px;
+  perspective: 800px;
  }
 
 .experience > span {
   display: inline-block;
   padding: 0;
   margin: 0;
-  -webkit-transform-origin: 50% 70%;
-          transform-origin: 50% 70%;
+  transform-origin: 50% 70%;
 }
 
 .experience > span:nth-child(1) {
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 4.8s infinite;
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 4.8s infinite;
 }
 
 .experience > span:nth-child(2) {
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2.2s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 5s infinite;
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2.2s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2.2s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 5s infinite;
 }
 
 .experience > span:nth-child(3) {
- -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2.4s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 5.2s infinite;
-         animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2.4s both,
+ animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2.4s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 5.2s infinite;
 }
 
 .experience > span:nth-child(4) {
- -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2.6s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 5.4s infinite;
-         animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2.6s both,
+ animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2.6s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 5.4s infinite;
 }
 
 .experience > span:nth-child(5) {
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2.8s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 5.8s infinite;
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2.8s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 2.8s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 5.8s infinite;
  }
 
 .experience > span:nth-child(6) {
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.1s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 6s infinite;
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.1s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.1s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 6s infinite;
 }
 
 .experience > span:nth-child(7) { 
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.2s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 6.2s infinite; 
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.2s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.2s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 6.2s infinite;
 }
 .experience > span:nth-child(8) { 
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.4s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 6.4s infinite; 
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.4s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.4s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 6.4s infinite;
 }
 .experience > span:nth-child(9) { 
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.6s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 6.8s infinite; 
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.6s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.6s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 6.8s infinite;
 }
 .experience > span:nth-child(10) { 
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.8s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 7s infinite; 
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.8s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 3.8s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 7s infinite;
 }
 .experience > span:nth-child(11) { 
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 7.2s infinite; 
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 7.2s infinite;
 }
 .experience > span:nth-child(12) { 
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4.2s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 7.4s infinite; 
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4.2s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4.2s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 7.4s infinite;
 }
 .experience > span:nth-child(13) { 
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4.4s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 7.6s infinite; 
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4.4s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4.4s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 7.6s infinite;
 }
 .experience > span:nth-child(14) { 
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4.6s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 7.8s infinite; 
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4.6s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4.6s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 7.8s infinite;
 }
 .experience > span:nth-child(15) { 
-  -webkit-animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4.8s both,
-              swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 8s infinite; 
-          animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4.8s both,
+  animation: flipUp 1s cubic-bezier(0.68, -0.55, 0.26, 1.55) 4.8s both,
               swing 4s cubic-bezier(0.45, 0.03, 0.51, 0.95) forwards 8s infinite;
 }
 
