Adds christmas lights using css3 only

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -14,7 +14,7 @@
     <li><a class="w3-padding-16" href="#">
       PORTFOLIO <sup class="w3-tag w3-red">Alpha</sup></a>
     </li>
-    <li><a class="w3-padding-16" href="#">SKILLS</a></li>
+    <li><a class="w3-padding-16" href="" ng-click="gotoAnchor(skills)">SKILLS</a></li>
     <li><a class="w3-padding-16" href="#">EDUCATION</a></li>
     <li><a class="w3-padding-16" href="#">EXPERIENCE</a></li>
     <li><a class="w3-padding-16" href="#">ACHIEVEMENTS</a></li>
