--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,8 @@
    ========================================================================== */
 body {
     overflow-x: hidden;
+    background-image: url(../img/background.jpg);
+    background-attachment: fixed;
   }
 
 #loader {
@@ -120,6 +122,7 @@ td a {
 
 article#main {
     margin: 0 auto 20px auto;
+    background-color: #fff;
 }
 
 @media only screen and (min-width: 993px) {
